# multi-agent-bench

./: .gitignore  AGENTS.md  Makefile  README.md
apps/agent-runtime/: .env.example  README.md  pyproject.toml
apps/agent-runtime/app/: main.py
apps/agent-runtime/app/architectures/: __init__.py  base.py  centralized.py  swarm.py  workflow.py
apps/agent-runtime/app/core/: config.py
apps/agent-runtime/app/schemas/: runtime.py
apps/agent-runtime/app/services/: callbacks.py  execution.py
apps/agent-runtime/app/telemetry/: setup.py
apps/agent-runtime/app/tools/: domain_tools.py
apps/agent-runtime/tests/: conftest.py  test_architecture_registry.py  test_architectures.py  test_domain_tools.py  test_runtime_service.py
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260422_0001_create_initial_tables.py  20260423_0002_create_runs.py  20260429_0003_create_run_execution_tables.py
apps/api/app/: __init__.py  main.py
apps/api/app/adapters/inbound/: __init__.py  base.py  web_chat.py  whatsapp.py
apps/api/app/adapters/outbound/: __init__.py  base.py  web_chat.py  (+1 more)
apps/api/app/core/: config.py  observability.py  security.py  tracing.py
apps/api/app/db/: mappers.py  models.py  models_import.py  session.py
apps/api/app/runtime/: __init__.py
apps/api/app/schemas/: __init__.py  api.py  domain.py  enums.py
apps/api/app/services/: __init__.py  conversations.py  dashboard.py  event_bus.py  events.py  file_metadata.py  messages.py  processing_dispatcher.py  reviews.py  run_execution.py  runs.py
apps/api/tests/: test_run_execution_projection.py
(+94 files in other folders)
